r1/root/iptables.rules
# Generated by xtables-save v1.8.2 on Sat Sep 16 20:40:55 2023
*nat
:DOCKER_OUTPUT - [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER_POSTROUTING - [0:0]
:POSTROUTING ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:42713
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:52243
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 42713 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 52243 -j SNAT --to-source :53
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth4 -j MASQUERADE
-A POSTROUTING -o eth5 -j MASQUERADE
-A PREROUTING -d 154.73.45.38/32 -i eth4 -p tcp -m tcp --dport 443 -m state --state NEW -m statistic --mode nth --every 2 --packet 0 -j DNAT --to-destination 172.16.6.11:443
-A PREROUTING -d 154.73.45.38/32 -i eth4 -p tcp -m tcp --dport 443 -m state --state NEW -m statistic --mode nth --every 1 --packet 0 -j DNAT --to-destination 172.16.6.12:443
COMMIT
# Completed on Sat Sep 16 20:40:55 2023
# Generated by xtables-save v1.8.2 on Sat Sep 16 20:40:55 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i eth4 -p ospf -m state --state NEW -j ACCEPT
-A INPUT -i eth5 -p ospf -m state --state NEW -j ACCEPT
-A INPUT -i eth4 -p udp -m udp --dport 1194 -m state --state NEW -j ACCEPT
-A INPUT -i eth4 -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -i eth5 -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -i tun0 -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -j DROP
-A FORWARD -i eth4 -p ospf -m state --state NEW -j ACCEPT
-A FORWARD -i eth5 -p ospf -m state --state NEW -j ACCEPT
-A FORWARD -i eth0 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -d 172.16.0.12/32 -i eth1 -o eth0 -m state --state NEW -j ACCEPT
-A FORWARD -d 172.16.0.11/32 -i eth2.50 -o eth0 -m state --state NEW -j ACCEPT
-A FORWARD -d 172.16.6.10/32 -i eth2.50 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -i eth0 -o eth5 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.2.0/24 -i eth1 -o eth5 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.4.0/24 -i eth2.50 -o eth5 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.6.0/24 -i eth3 -o eth4 -m state --state NEW -j ACCEPT
-A FORWARD -d 172.16.6.11/32 -i eth4 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -d 172.16.6.12/32 -i eth4 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -d 172.16.0.0/24 -i tun0 -o eth0 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -d 192.168.10.0/24 -i eth0 -o tun0 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -d 172.16.6.0/24 -i tun0 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -s 172.16.2.0/24 -d 172.16.6.10/32 -i eth1 -o eth3 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j DROP
COMMIT
# Completed on Sat Sep 16 20:40:55 2023
# Generated by xtables-save v1.8.2 on Sat Sep 16 20:40:55 2023
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A FORWARD -i eth1 -o eth5 -j MARK --set-xmark 0x2/0xffffffff
-A FORWARD -i eth1 -o eth5 -j RETURN
-A FORWARD -i eth2.50 -o eth5 -j MARK --set-xmark 0x3/0xffffffff
-A FORWARD -i eth2.50 -o eth5 -j RETURN
-A FORWARD -i eth5 -o eth1 -j MARK --set-xmark 0x4/0xffffffff
-A FORWARD -i eth5 -o eth1 -j RETURN
-A FORWARD -i eth5 -o eth2.50 -j MARK --set-xmark 0x5/0xffffffff
-A FORWARD -i eth5 -o eth2.50 -j RETURN
-A FORWARD -s 172.16.0.2/32 -i eth0 -o eth5 -j MARK --set-xmark 0x52/0xffffffff
-A FORWARD -s 172.16.0.2/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.3/32 -i eth0 -o eth5 -j MARK --set-xmark 0x53/0xffffffff
-A FORWARD -s 172.16.0.3/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.4/32 -i eth0 -o eth5 -j MARK --set-xmark 0x54/0xffffffff
-A FORWARD -s 172.16.0.4/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.5/32 -i eth0 -o eth5 -j MARK --set-xmark 0x55/0xffffffff
-A FORWARD -s 172.16.0.5/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.6/32 -i eth0 -o eth5 -j MARK --set-xmark 0x56/0xffffffff
-A FORWARD -s 172.16.0.6/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.7/32 -i eth0 -o eth5 -j MARK --set-xmark 0x57/0xffffffff
-A FORWARD -s 172.16.0.7/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.8/32 -i eth0 -o eth5 -j MARK --set-xmark 0x58/0xffffffff
-A FORWARD -s 172.16.0.8/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.9/32 -i eth0 -o eth5 -j MARK --set-xmark 0x59/0xffffffff
-A FORWARD -s 172.16.0.9/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.10/32 -i eth0 -o eth5 -j MARK --set-xmark 0x32a/0xffffffff
-A FORWARD -s 172.16.0.10/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.11/32 -i eth0 -o eth5 -j MARK --set-xmark 0x32b/0xffffffff
-A FORWARD -s 172.16.0.11/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.12/32 -i eth0 -o eth5 -j MARK --set-xmark 0x32c/0xffffffff
-A FORWARD -s 172.16.0.12/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.13/32 -i eth0 -o eth5 -j MARK --set-xmark 0x32d/0xffffffff
-A FORWARD -s 172.16.0.13/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.14/32 -i eth0 -o eth5 -j MARK --set-xmark 0x32e/0xffffffff
-A FORWARD -s 172.16.0.14/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.15/32 -i eth0 -o eth5 -j MARK --set-xmark 0x32f/0xffffffff
-A FORWARD -s 172.16.0.15/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.16/32 -i eth0 -o eth5 -j MARK --set-xmark 0x330/0xffffffff
-A FORWARD -s 172.16.0.16/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.17/32 -i eth0 -o eth5 -j MARK --set-xmark 0x331/0xffffffff
-A FORWARD -s 172.16.0.17/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.18/32 -i eth0 -o eth5 -j MARK --set-xmark 0x332/0xffffffff
-A FORWARD -s 172.16.0.18/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.19/32 -i eth0 -o eth5 -j MARK --set-xmark 0x333/0xffffffff
-A FORWARD -s 172.16.0.19/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.20/32 -i eth0 -o eth5 -j MARK --set-xmark 0x334/0xffffffff
-A FORWARD -s 172.16.0.20/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.21/32 -i eth0 -o eth5 -j MARK --set-xmark 0x335/0xffffffff
-A FORWARD -s 172.16.0.21/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.22/32 -i eth0 -o eth5 -j MARK --set-xmark 0x336/0xffffffff
-A FORWARD -s 172.16.0.22/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.23/32 -i eth0 -o eth5 -j MARK --set-xmark 0x337/0xffffffff
-A FORWARD -s 172.16.0.23/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.24/32 -i eth0 -o eth5 -j MARK --set-xmark 0x338/0xffffffff
-A FORWARD -s 172.16.0.24/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.25/32 -i eth0 -o eth5 -j MARK --set-xmark 0x339/0xffffffff
-A FORWARD -s 172.16.0.25/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.26/32 -i eth0 -o eth5 -j MARK --set-xmark 0x33a/0xffffffff
-A FORWARD -s 172.16.0.26/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.27/32 -i eth0 -o eth5 -j MARK --set-xmark 0x33b/0xffffffff
-A FORWARD -s 172.16.0.27/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.28/32 -i eth0 -o eth5 -j MARK --set-xmark 0x33c/0xffffffff
-A FORWARD -s 172.16.0.28/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.29/32 -i eth0 -o eth5 -j MARK --set-xmark 0x33d/0xffffffff
-A FORWARD -s 172.16.0.29/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.30/32 -i eth0 -o eth5 -j MARK --set-xmark 0x33e/0xffffffff
-A FORWARD -s 172.16.0.30/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.31/32 -i eth0 -o eth5 -j MARK --set-xmark 0x33f/0xffffffff
-A FORWARD -s 172.16.0.31/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.32/32 -i eth0 -o eth5 -j MARK --set-xmark 0x340/0xffffffff
-A FORWARD -s 172.16.0.32/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.33/32 -i eth0 -o eth5 -j MARK --set-xmark 0x341/0xffffffff
-A FORWARD -s 172.16.0.33/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.34/32 -i eth0 -o eth5 -j MARK --set-xmark 0x342/0xffffffff
-A FORWARD -s 172.16.0.34/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.35/32 -i eth0 -o eth5 -j MARK --set-xmark 0x343/0xffffffff
-A FORWARD -s 172.16.0.35/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.36/32 -i eth0 -o eth5 -j MARK --set-xmark 0x344/0xffffffff
-A FORWARD -s 172.16.0.36/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.37/32 -i eth0 -o eth5 -j MARK --set-xmark 0x345/0xffffffff
-A FORWARD -s 172.16.0.37/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.38/32 -i eth0 -o eth5 -j MARK --set-xmark 0x346/0xffffffff
-A FORWARD -s 172.16.0.38/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.39/32 -i eth0 -o eth5 -j MARK --set-xmark 0x347/0xffffffff
-A FORWARD -s 172.16.0.39/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.40/32 -i eth0 -o eth5 -j MARK --set-xmark 0x348/0xffffffff
-A FORWARD -s 172.16.0.40/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.41/32 -i eth0 -o eth5 -j MARK --set-xmark 0x349/0xffffffff
-A FORWARD -s 172.16.0.41/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.42/32 -i eth0 -o eth5 -j MARK --set-xmark 0x34a/0xffffffff
-A FORWARD -s 172.16.0.42/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.43/32 -i eth0 -o eth5 -j MARK --set-xmark 0x34b/0xffffffff
-A FORWARD -s 172.16.0.43/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.44/32 -i eth0 -o eth5 -j MARK --set-xmark 0x34c/0xffffffff
-A FORWARD -s 172.16.0.44/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.45/32 -i eth0 -o eth5 -j MARK --set-xmark 0x34d/0xffffffff
-A FORWARD -s 172.16.0.45/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.46/32 -i eth0 -o eth5 -j MARK --set-xmark 0x34e/0xffffffff
-A FORWARD -s 172.16.0.46/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.47/32 -i eth0 -o eth5 -j MARK --set-xmark 0x34f/0xffffffff
-A FORWARD -s 172.16.0.47/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.48/32 -i eth0 -o eth5 -j MARK --set-xmark 0x350/0xffffffff
-A FORWARD -s 172.16.0.48/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.49/32 -i eth0 -o eth5 -j MARK --set-xmark 0x351/0xffffffff
-A FORWARD -s 172.16.0.49/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.50/32 -i eth0 -o eth5 -j MARK --set-xmark 0x352/0xffffffff
-A FORWARD -s 172.16.0.50/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.51/32 -i eth0 -o eth5 -j MARK --set-xmark 0x353/0xffffffff
-A FORWARD -s 172.16.0.51/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.52/32 -i eth0 -o eth5 -j MARK --set-xmark 0x354/0xffffffff
-A FORWARD -s 172.16.0.52/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.53/32 -i eth0 -o eth5 -j MARK --set-xmark 0x355/0xffffffff
-A FORWARD -s 172.16.0.53/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.54/32 -i eth0 -o eth5 -j MARK --set-xmark 0x356/0xffffffff
-A FORWARD -s 172.16.0.54/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.55/32 -i eth0 -o eth5 -j MARK --set-xmark 0x357/0xffffffff
-A FORWARD -s 172.16.0.55/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.56/32 -i eth0 -o eth5 -j MARK --set-xmark 0x358/0xffffffff
-A FORWARD -s 172.16.0.56/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.57/32 -i eth0 -o eth5 -j MARK --set-xmark 0x359/0xffffffff
-A FORWARD -s 172.16.0.57/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.58/32 -i eth0 -o eth5 -j MARK --set-xmark 0x35a/0xffffffff
-A FORWARD -s 172.16.0.58/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.59/32 -i eth0 -o eth5 -j MARK --set-xmark 0x35b/0xffffffff
-A FORWARD -s 172.16.0.59/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.60/32 -i eth0 -o eth5 -j MARK --set-xmark 0x35c/0xffffffff
-A FORWARD -s 172.16.0.60/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.61/32 -i eth0 -o eth5 -j MARK --set-xmark 0x35d/0xffffffff
-A FORWARD -s 172.16.0.61/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.62/32 -i eth0 -o eth5 -j MARK --set-xmark 0x35e/0xffffffff
-A FORWARD -s 172.16.0.62/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.63/32 -i eth0 -o eth5 -j MARK --set-xmark 0x35f/0xffffffff
-A FORWARD -s 172.16.0.63/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.64/32 -i eth0 -o eth5 -j MARK --set-xmark 0x360/0xffffffff
-A FORWARD -s 172.16.0.64/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.65/32 -i eth0 -o eth5 -j MARK --set-xmark 0x361/0xffffffff
-A FORWARD -s 172.16.0.65/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.66/32 -i eth0 -o eth5 -j MARK --set-xmark 0x362/0xffffffff
-A FORWARD -s 172.16.0.66/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.67/32 -i eth0 -o eth5 -j MARK --set-xmark 0x363/0xffffffff
-A FORWARD -s 172.16.0.67/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.68/32 -i eth0 -o eth5 -j MARK --set-xmark 0x364/0xffffffff
-A FORWARD -s 172.16.0.68/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.69/32 -i eth0 -o eth5 -j MARK --set-xmark 0x365/0xffffffff
-A FORWARD -s 172.16.0.69/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.70/32 -i eth0 -o eth5 -j MARK --set-xmark 0x366/0xffffffff
-A FORWARD -s 172.16.0.70/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.71/32 -i eth0 -o eth5 -j MARK --set-xmark 0x367/0xffffffff
-A FORWARD -s 172.16.0.71/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.72/32 -i eth0 -o eth5 -j MARK --set-xmark 0x368/0xffffffff
-A FORWARD -s 172.16.0.72/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.73/32 -i eth0 -o eth5 -j MARK --set-xmark 0x369/0xffffffff
-A FORWARD -s 172.16.0.73/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.74/32 -i eth0 -o eth5 -j MARK --set-xmark 0x36a/0xffffffff
-A FORWARD -s 172.16.0.74/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.75/32 -i eth0 -o eth5 -j MARK --set-xmark 0x36b/0xffffffff
-A FORWARD -s 172.16.0.75/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.76/32 -i eth0 -o eth5 -j MARK --set-xmark 0x36c/0xffffffff
-A FORWARD -s 172.16.0.76/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.77/32 -i eth0 -o eth5 -j MARK --set-xmark 0x36d/0xffffffff
-A FORWARD -s 172.16.0.77/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.78/32 -i eth0 -o eth5 -j MARK --set-xmark 0x36e/0xffffffff
-A FORWARD -s 172.16.0.78/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.79/32 -i eth0 -o eth5 -j MARK --set-xmark 0x36f/0xffffffff
-A FORWARD -s 172.16.0.79/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.80/32 -i eth0 -o eth5 -j MARK --set-xmark 0x370/0xffffffff
-A FORWARD -s 172.16.0.80/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.81/32 -i eth0 -o eth5 -j MARK --set-xmark 0x371/0xffffffff
-A FORWARD -s 172.16.0.81/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.82/32 -i eth0 -o eth5 -j MARK --set-xmark 0x372/0xffffffff
-A FORWARD -s 172.16.0.82/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.83/32 -i eth0 -o eth5 -j MARK --set-xmark 0x373/0xffffffff
-A FORWARD -s 172.16.0.83/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.84/32 -i eth0 -o eth5 -j MARK --set-xmark 0x374/0xffffffff
-A FORWARD -s 172.16.0.84/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.85/32 -i eth0 -o eth5 -j MARK --set-xmark 0x375/0xffffffff
-A FORWARD -s 172.16.0.85/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.86/32 -i eth0 -o eth5 -j MARK --set-xmark 0x376/0xffffffff
-A FORWARD -s 172.16.0.86/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.87/32 -i eth0 -o eth5 -j MARK --set-xmark 0x377/0xffffffff
-A FORWARD -s 172.16.0.87/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.88/32 -i eth0 -o eth5 -j MARK --set-xmark 0x378/0xffffffff
-A FORWARD -s 172.16.0.88/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.89/32 -i eth0 -o eth5 -j MARK --set-xmark 0x379/0xffffffff
-A FORWARD -s 172.16.0.89/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.90/32 -i eth0 -o eth5 -j MARK --set-xmark 0x37a/0xffffffff
-A FORWARD -s 172.16.0.90/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.91/32 -i eth0 -o eth5 -j MARK --set-xmark 0x37b/0xffffffff
-A FORWARD -s 172.16.0.91/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.92/32 -i eth0 -o eth5 -j MARK --set-xmark 0x37c/0xffffffff
-A FORWARD -s 172.16.0.92/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.93/32 -i eth0 -o eth5 -j MARK --set-xmark 0x37d/0xffffffff
-A FORWARD -s 172.16.0.93/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.94/32 -i eth0 -o eth5 -j MARK --set-xmark 0x37e/0xffffffff
-A FORWARD -s 172.16.0.94/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.95/32 -i eth0 -o eth5 -j MARK --set-xmark 0x37f/0xffffffff
-A FORWARD -s 172.16.0.95/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.96/32 -i eth0 -o eth5 -j MARK --set-xmark 0x380/0xffffffff
-A FORWARD -s 172.16.0.96/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.97/32 -i eth0 -o eth5 -j MARK --set-xmark 0x381/0xffffffff
-A FORWARD -s 172.16.0.97/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.98/32 -i eth0 -o eth5 -j MARK --set-xmark 0x382/0xffffffff
-A FORWARD -s 172.16.0.98/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.99/32 -i eth0 -o eth5 -j MARK --set-xmark 0x383/0xffffffff
-A FORWARD -s 172.16.0.99/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.100/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fa4/0xffffffff
-A FORWARD -s 172.16.0.100/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.101/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fa5/0xffffffff
-A FORWARD -s 172.16.0.101/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.102/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fa6/0xffffffff
-A FORWARD -s 172.16.0.102/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.103/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fa7/0xffffffff
-A FORWARD -s 172.16.0.103/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.104/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fa8/0xffffffff
-A FORWARD -s 172.16.0.104/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.105/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fa9/0xffffffff
-A FORWARD -s 172.16.0.105/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.106/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1faa/0xffffffff
-A FORWARD -s 172.16.0.106/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.107/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fab/0xffffffff
-A FORWARD -s 172.16.0.107/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.108/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fac/0xffffffff
-A FORWARD -s 172.16.0.108/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.109/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fad/0xffffffff
-A FORWARD -s 172.16.0.109/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.110/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fae/0xffffffff
-A FORWARD -s 172.16.0.110/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.111/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1faf/0xffffffff
-A FORWARD -s 172.16.0.111/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.112/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb0/0xffffffff
-A FORWARD -s 172.16.0.112/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.113/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb1/0xffffffff
-A FORWARD -s 172.16.0.113/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.114/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb2/0xffffffff
-A FORWARD -s 172.16.0.114/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.115/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb3/0xffffffff
-A FORWARD -s 172.16.0.115/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.116/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb4/0xffffffff
-A FORWARD -s 172.16.0.116/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.117/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb5/0xffffffff
-A FORWARD -s 172.16.0.117/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.118/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb6/0xffffffff
-A FORWARD -s 172.16.0.118/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.119/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb7/0xffffffff
-A FORWARD -s 172.16.0.119/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.120/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb8/0xffffffff
-A FORWARD -s 172.16.0.120/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.121/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fb9/0xffffffff
-A FORWARD -s 172.16.0.121/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.122/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fba/0xffffffff
-A FORWARD -s 172.16.0.122/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.123/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fbb/0xffffffff
-A FORWARD -s 172.16.0.123/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.124/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fbc/0xffffffff
-A FORWARD -s 172.16.0.124/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.125/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fbd/0xffffffff
-A FORWARD -s 172.16.0.125/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.126/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fbe/0xffffffff
-A FORWARD -s 172.16.0.126/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.127/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fbf/0xffffffff
-A FORWARD -s 172.16.0.127/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.128/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc0/0xffffffff
-A FORWARD -s 172.16.0.128/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.129/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc1/0xffffffff
-A FORWARD -s 172.16.0.129/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.130/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc2/0xffffffff
-A FORWARD -s 172.16.0.130/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.131/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc3/0xffffffff
-A FORWARD -s 172.16.0.131/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.132/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc4/0xffffffff
-A FORWARD -s 172.16.0.132/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.133/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc5/0xffffffff
-A FORWARD -s 172.16.0.133/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.134/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc6/0xffffffff
-A FORWARD -s 172.16.0.134/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.135/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc7/0xffffffff
-A FORWARD -s 172.16.0.135/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.136/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc8/0xffffffff
-A FORWARD -s 172.16.0.136/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.137/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fc9/0xffffffff
-A FORWARD -s 172.16.0.137/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.138/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fca/0xffffffff
-A FORWARD -s 172.16.0.138/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.139/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fcb/0xffffffff
-A FORWARD -s 172.16.0.139/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.140/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fcc/0xffffffff
-A FORWARD -s 172.16.0.140/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.141/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fcd/0xffffffff
-A FORWARD -s 172.16.0.141/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.142/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fce/0xffffffff
-A FORWARD -s 172.16.0.142/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.143/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fcf/0xffffffff
-A FORWARD -s 172.16.0.143/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.144/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd0/0xffffffff
-A FORWARD -s 172.16.0.144/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.145/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd1/0xffffffff
-A FORWARD -s 172.16.0.145/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.146/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd2/0xffffffff
-A FORWARD -s 172.16.0.146/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.147/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd3/0xffffffff
-A FORWARD -s 172.16.0.147/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.148/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd4/0xffffffff
-A FORWARD -s 172.16.0.148/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.149/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd5/0xffffffff
-A FORWARD -s 172.16.0.149/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.150/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd6/0xffffffff
-A FORWARD -s 172.16.0.150/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.151/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd7/0xffffffff
-A FORWARD -s 172.16.0.151/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.152/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd8/0xffffffff
-A FORWARD -s 172.16.0.152/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.153/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fd9/0xffffffff
-A FORWARD -s 172.16.0.153/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.154/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fda/0xffffffff
-A FORWARD -s 172.16.0.154/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.155/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fdb/0xffffffff
-A FORWARD -s 172.16.0.155/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.156/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fdc/0xffffffff
-A FORWARD -s 172.16.0.156/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.157/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fdd/0xffffffff
-A FORWARD -s 172.16.0.157/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.158/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fde/0xffffffff
-A FORWARD -s 172.16.0.158/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.159/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fdf/0xffffffff
-A FORWARD -s 172.16.0.159/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.160/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe0/0xffffffff
-A FORWARD -s 172.16.0.160/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.161/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe1/0xffffffff
-A FORWARD -s 172.16.0.161/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.162/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe2/0xffffffff
-A FORWARD -s 172.16.0.162/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.163/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe3/0xffffffff
-A FORWARD -s 172.16.0.163/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.164/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe4/0xffffffff
-A FORWARD -s 172.16.0.164/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.165/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe5/0xffffffff
-A FORWARD -s 172.16.0.165/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.166/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe6/0xffffffff
-A FORWARD -s 172.16.0.166/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.167/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe7/0xffffffff
-A FORWARD -s 172.16.0.167/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.168/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe8/0xffffffff
-A FORWARD -s 172.16.0.168/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.169/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fe9/0xffffffff
-A FORWARD -s 172.16.0.169/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.170/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fea/0xffffffff
-A FORWARD -s 172.16.0.170/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.171/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1feb/0xffffffff
-A FORWARD -s 172.16.0.171/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.172/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fec/0xffffffff
-A FORWARD -s 172.16.0.172/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.173/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fed/0xffffffff
-A FORWARD -s 172.16.0.173/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.174/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fee/0xffffffff
-A FORWARD -s 172.16.0.174/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.175/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fef/0xffffffff
-A FORWARD -s 172.16.0.175/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.176/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff0/0xffffffff
-A FORWARD -s 172.16.0.176/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.177/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff1/0xffffffff
-A FORWARD -s 172.16.0.177/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.178/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff2/0xffffffff
-A FORWARD -s 172.16.0.178/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.179/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff3/0xffffffff
-A FORWARD -s 172.16.0.179/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.180/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff4/0xffffffff
-A FORWARD -s 172.16.0.180/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.181/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff5/0xffffffff
-A FORWARD -s 172.16.0.181/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.182/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff6/0xffffffff
-A FORWARD -s 172.16.0.182/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.183/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff7/0xffffffff
-A FORWARD -s 172.16.0.183/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.184/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff8/0xffffffff
-A FORWARD -s 172.16.0.184/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.185/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ff9/0xffffffff
-A FORWARD -s 172.16.0.185/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.186/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ffa/0xffffffff
-A FORWARD -s 172.16.0.186/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.187/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ffb/0xffffffff
-A FORWARD -s 172.16.0.187/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.188/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ffc/0xffffffff
-A FORWARD -s 172.16.0.188/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.189/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ffd/0xffffffff
-A FORWARD -s 172.16.0.189/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.190/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1ffe/0xffffffff
-A FORWARD -s 172.16.0.190/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.191/32 -i eth0 -o eth5 -j MARK --set-xmark 0x1fff/0xffffffff
-A FORWARD -s 172.16.0.191/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.192/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2000/0xffffffff
-A FORWARD -s 172.16.0.192/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.193/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2001/0xffffffff
-A FORWARD -s 172.16.0.193/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.194/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2002/0xffffffff
-A FORWARD -s 172.16.0.194/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.195/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2003/0xffffffff
-A FORWARD -s 172.16.0.195/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.196/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2004/0xffffffff
-A FORWARD -s 172.16.0.196/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.197/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2005/0xffffffff
-A FORWARD -s 172.16.0.197/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.198/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2006/0xffffffff
-A FORWARD -s 172.16.0.198/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.199/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2007/0xffffffff
-A FORWARD -s 172.16.0.199/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.200/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2008/0xffffffff
-A FORWARD -s 172.16.0.200/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.201/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2009/0xffffffff
-A FORWARD -s 172.16.0.201/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.202/32 -i eth0 -o eth5 -j MARK --set-xmark 0x200a/0xffffffff
-A FORWARD -s 172.16.0.202/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.203/32 -i eth0 -o eth5 -j MARK --set-xmark 0x200b/0xffffffff
-A FORWARD -s 172.16.0.203/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.204/32 -i eth0 -o eth5 -j MARK --set-xmark 0x200c/0xffffffff
-A FORWARD -s 172.16.0.204/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.205/32 -i eth0 -o eth5 -j MARK --set-xmark 0x200d/0xffffffff
-A FORWARD -s 172.16.0.205/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.206/32 -i eth0 -o eth5 -j MARK --set-xmark 0x200e/0xffffffff
-A FORWARD -s 172.16.0.206/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.207/32 -i eth0 -o eth5 -j MARK --set-xmark 0x200f/0xffffffff
-A FORWARD -s 172.16.0.207/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.208/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2010/0xffffffff
-A FORWARD -s 172.16.0.208/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.209/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2011/0xffffffff
-A FORWARD -s 172.16.0.209/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.210/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2012/0xffffffff
-A FORWARD -s 172.16.0.210/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.211/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2013/0xffffffff
-A FORWARD -s 172.16.0.211/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.212/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2014/0xffffffff
-A FORWARD -s 172.16.0.212/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.213/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2015/0xffffffff
-A FORWARD -s 172.16.0.213/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.214/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2016/0xffffffff
-A FORWARD -s 172.16.0.214/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.215/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2017/0xffffffff
-A FORWARD -s 172.16.0.215/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.216/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2018/0xffffffff
-A FORWARD -s 172.16.0.216/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.217/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2019/0xffffffff
-A FORWARD -s 172.16.0.217/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.218/32 -i eth0 -o eth5 -j MARK --set-xmark 0x201a/0xffffffff
-A FORWARD -s 172.16.0.218/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.219/32 -i eth0 -o eth5 -j MARK --set-xmark 0x201b/0xffffffff
-A FORWARD -s 172.16.0.219/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.220/32 -i eth0 -o eth5 -j MARK --set-xmark 0x201c/0xffffffff
-A FORWARD -s 172.16.0.220/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.221/32 -i eth0 -o eth5 -j MARK --set-xmark 0x201d/0xffffffff
-A FORWARD -s 172.16.0.221/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.222/32 -i eth0 -o eth5 -j MARK --set-xmark 0x201e/0xffffffff
-A FORWARD -s 172.16.0.222/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.223/32 -i eth0 -o eth5 -j MARK --set-xmark 0x201f/0xffffffff
-A FORWARD -s 172.16.0.223/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.224/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2020/0xffffffff
-A FORWARD -s 172.16.0.224/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.225/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2021/0xffffffff
-A FORWARD -s 172.16.0.225/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.226/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2022/0xffffffff
-A FORWARD -s 172.16.0.226/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.227/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2023/0xffffffff
-A FORWARD -s 172.16.0.227/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.228/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2024/0xffffffff
-A FORWARD -s 172.16.0.228/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.229/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2025/0xffffffff
-A FORWARD -s 172.16.0.229/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.230/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2026/0xffffffff
-A FORWARD -s 172.16.0.230/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.231/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2027/0xffffffff
-A FORWARD -s 172.16.0.231/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.232/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2028/0xffffffff
-A FORWARD -s 172.16.0.232/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.233/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2029/0xffffffff
-A FORWARD -s 172.16.0.233/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.234/32 -i eth0 -o eth5 -j MARK --set-xmark 0x202a/0xffffffff
-A FORWARD -s 172.16.0.234/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.235/32 -i eth0 -o eth5 -j MARK --set-xmark 0x202b/0xffffffff
-A FORWARD -s 172.16.0.235/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.236/32 -i eth0 -o eth5 -j MARK --set-xmark 0x202c/0xffffffff
-A FORWARD -s 172.16.0.236/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.237/32 -i eth0 -o eth5 -j MARK --set-xmark 0x202d/0xffffffff
-A FORWARD -s 172.16.0.237/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.238/32 -i eth0 -o eth5 -j MARK --set-xmark 0x202e/0xffffffff
-A FORWARD -s 172.16.0.238/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.239/32 -i eth0 -o eth5 -j MARK --set-xmark 0x202f/0xffffffff
-A FORWARD -s 172.16.0.239/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.240/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2030/0xffffffff
-A FORWARD -s 172.16.0.240/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.241/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2031/0xffffffff
-A FORWARD -s 172.16.0.241/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.242/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2032/0xffffffff
-A FORWARD -s 172.16.0.242/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.243/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2033/0xffffffff
-A FORWARD -s 172.16.0.243/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.244/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2034/0xffffffff
-A FORWARD -s 172.16.0.244/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.245/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2035/0xffffffff
-A FORWARD -s 172.16.0.245/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.246/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2036/0xffffffff
-A FORWARD -s 172.16.0.246/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.247/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2037/0xffffffff
-A FORWARD -s 172.16.0.247/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.248/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2038/0xffffffff
-A FORWARD -s 172.16.0.248/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.249/32 -i eth0 -o eth5 -j MARK --set-xmark 0x2039/0xffffffff
-A FORWARD -s 172.16.0.249/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.250/32 -i eth0 -o eth5 -j MARK --set-xmark 0x203a/0xffffffff
-A FORWARD -s 172.16.0.250/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.251/32 -i eth0 -o eth5 -j MARK --set-xmark 0x203b/0xffffffff
-A FORWARD -s 172.16.0.251/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.252/32 -i eth0 -o eth5 -j MARK --set-xmark 0x203c/0xffffffff
-A FORWARD -s 172.16.0.252/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.253/32 -i eth0 -o eth5 -j MARK --set-xmark 0x203d/0xffffffff
-A FORWARD -s 172.16.0.253/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -s 172.16.0.254/32 -i eth0 -o eth5 -j MARK --set-xmark 0x203e/0xffffffff
-A FORWARD -s 172.16.0.254/32 -i eth0 -o eth5 -j RETURN
-A FORWARD -o eth0 -j MARK --set-xmark 0x6/0xffffffff
-A FORWARD -o eth0 -j RETURN
COMMIT
# Completed on Sat Sep 16 20:40:55 2023
